# ironsmith

./: .gitignore  Cargo.toml  DEFERRED.md  LLM.md  PARSER.md  README.md  UNIMPLEMENTED.md  build.rs  mechanics.md  rebuild-wasm.sh
crates/ironsmith-tools/: Cargo.toml
crates/ironsmith-tools/src/: lib.rs
crates/ironsmith-tools/tests/: status_db_binaries.rs
scripts/: cpuprofile_to_folded.mjs  download_scryfall_cards.py  generate_baked_registry.py  generate_test_flamegraph.sh  profile_wasm_exchange_of_words_node.mjs  stream_scryfall_blocks.py
src/: ability.rs  alternative_cast.rs  condition_eval.rs  continuous.rs  cost.rs  decision.rs  dependency.rs  derived_view.rs  dungeon.rs  effect.rs  event_processor.rs  executor.rs  filter.rs  game_state.rs  grant.rs  grant_registry.rs  lib.rs  main.rs  object.rs  object_query.rs  perf.rs  player.rs  prevention.rs  provenance.rs  replacement.rs  replacement_ability_processor.rs  resolution.rs  semantic_compare.rs  snapshot.rs  special_actions.rs  static_ability_processor.rs  text_cleanup.rs  tooling.rs  turn.rs  turn_history.rs  turn_runner.rs  types.rs  wasm_api.rs
src/cards/: builders.rs  handwritten_runtime.rs  mod.rs
src/compiled_text/: merge_passes.rs  mod.rs  normalize_common.rs  normalize_post_pass.rs  oracle_style.rs  render_effects.rs  render_pipeline.rs
src/costs/: mana.rs  mod.rs  payer_trait.rs
src/decisions/: context.rs  make_decision.rs  mod.rs
src/effects/: consult_helpers.rs  executor_trait.rs  helpers.rs  mod.rs
src/events/: cause.rs  mod.rs  traits.rs
src/game_loop/: choose_player_tests.rs  combat_damage.rs  combat_decisions.rs  mod.rs  priority_apply.rs  priority_cast.rs  priority_core.rs  priority_mana.rs  priority_state.rs  tests.rs  (+3 more)
tests/: parser_diagnostics_rule_ids.rs  parser_frontend_regressions.rs  parser_smoke.rs  semantic_mismatch_regressions.rs  undo_action_chain.rs
(+631 files in other folders)
