[package]
name = "ironsmith-tools"
version = "0.1.0"
edition = "2024"
autobins = false

[dependencies]
ironsmith = { path = "../..", features = ["tooling"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
tempfile = "3.14"

[[bin]]
name = "audit_compiled_cards"
path = "../../src/bin/audit_compiled_cards.rs"
test = false

[[bin]]
name = "audit_oracle_clusters"
path = "../../src/bin/audit_oracle_clusters.rs"
test = false

[[bin]]
name = "audit_parsed_mechanics"
path = "../../src/bin/audit_parsed_mechanics.rs"
test = false

[[bin]]
name = "audit_unimplemented_partition"
path = "../../src/bin/audit_unimplemented_partition.rs"
test = false

[[bin]]
name = "compile_oracle_text"
path = "../../src/bin/compile_oracle_text.rs"
test = false

[[bin]]
name = "dump_false_positive_texts"
path = "../../src/bin/dump_false_positive_texts.rs"
test = false

[[bin]]
name = "export_compiled_oracle_csv"
path = "../../src/bin/export_compiled_oracle_csv.rs"
test = false

[[bin]]
name = "parse_card_text"
path = "../../src/bin/parse_card_text.rs"
test = false

[[bin]]
name = "rebuild_reports"
path = "../../src/bin/rebuild_reports.rs"
test = false

[[bin]]
name = "report_replacement_effect_parse_status"
path = "../../src/bin/report_replacement_effect_parse_status.rs"
test = false

[[bin]]
name = "sync_card_status_db"
path = "../../src/bin/sync_card_status_db.rs"
test = false

[[bin]]
name = "import_card_tags"
path = "../../src/bin/import_card_tags.rs"
test = false

[[bin]]
name = "sync_oracle_tags"
path = "../../src/bin/sync_oracle_tags.rs"
test = false

[[bin]]
name = "sync_card_tagging"
path = "../../src/bin/sync_card_tagging.rs"
test = false
